--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "elliptical-example",
   "version": "0.0.1",
-  "description": "Very basic, runnable example of Elliptical usage (from the README)",
+  "description": "Very basic, runnable example of Elliptical usage",
   "main": "lib/index.js",
   "scripts": {
     "build": "babel src --out-dir lib",
@@ -29,12 +29,12 @@
   },
   "homepage": "https://github.com/laconalabs/elliptical-example#readme",
   "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-plugin-transform-react-jsx": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0"
+    "babel-cli": "^6.11.4",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0"
   },
   "dependencies": {
-    "elliptical": "^1.0.0-rc10"
+    "elliptical": "^1.0.0"
   },
   "babel": {
     "presets": [
